# srwsc

./: LICENSE
proto/: .srwsc_pb.proto.swp  srwsc_pb.proto
srwc/: Cargo.toml
srwc/src/: config.rs  error.rs  grpc_client.rs  http_client.rs  main.rs  misc.rs
srws/: Cargo.toml  build.rs
srws/src/: config.rs  error.rs  grpc_server.rs  http_server.rs  main.rs  misc.rs
