[package]
name = "srwc"
version = "0.1.0"
authors = ["Yong-heon.Kim <yong-heon.kim@windriver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ace = "0.2.0"
encoding = "0.2"
console = "0.5.0"
pbr = "1.0.0"
regex = "0.2"
