[package]
name = "srwc"
version = "0.1.0"
authors = ["Yong-heon.Kim <yong-heon.kim@windriver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ace = "0.2.0"
encoding = "0.2"
console = "0.5.0"
pbr = "1.0.0"
regex = "0.2"
tonic = {version="0.2.0",features = ["tls"]}
tokio = {version="0.2.18",features = ["full"]}
prost = "0.6.1"
futures = "0.3"

[build-dependencies]
tonic-build = "0.2.0"
